--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show do Milhão</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -72,6 +72,6 @@
         </div>
     </div>
 
-    <script src="static/script.js"></script>
+    <script src="static.js"></script>
 </body>
 </html>
